--- a/dbv/config.php.sample
+++ b/dbv/config.php.sample
@@ -8,7 +8,7 @@ define('DB_HOST', 'localhost');
 define('DB_PORT', 3306);
 define('DB_USERNAME', 'root');
 define('DB_PASSWORD', '');
-define('DB_NAME', 'test');
+define('DB_NAME', 'southern_cross');
 
 /**
  * Authentication data for access to DBV itself
